Updated package.json file

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ghpagesdemo",
+  "name": "React Demo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nzlotrfan.github.io/ghpagesdemo",
+  "homepage": "https://sw-tt-saurinshah.github.io/react-vite-demo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
