Updated package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React Demo",
+  "name": "react-demo",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://sw-tt-saurinshah.github.io/react-vite-demo",
