--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
       - run: npm run build --if-present
       - run: npm test
 
-      - name: Deploy with main
+      - name: Deploy with dev
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: "react-vite-demo"
