--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "deploy": "main -d build",
+    "deploy": "dev -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
