--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,55 +13,102 @@ permissions:
   contents: write
 
 jobs:
-  eslint:
+  lint:
+    name: ESLint Check
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
-
-      - name: Install dependencies
-        run: npm install
-
+      - run: npm install
       - name: Run ESLint
         run: npx eslint . --ext .js,.jsx,.ts,.tsx
 
-  # sonarcloud:
-  #   name: SonarCloud Scan
+  prettier:
+    name: Prettier Format Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: npm install
+      - name: Check code formatting
+        run: npx prettier . --check
+
+  type-check:
+    name: TypeScript Type Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: npm install
+      - name: Run TypeScript
+        run: npx tsc --noEmit
+
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: npm install
+      - name: Run Jest Tests
+        run: npm test -- --coverage
+
+  audit:
+    name: Dependency Audit
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: npm install
+      - name: Audit Dependencies
+        run: npm audit --audit-level=high
+
+  # sonar:
+  #   name: SonarCloud Analysis
   #   runs-on: ubuntu-latest
-  #   needs: eslint
-
+  #   needs: [lint, prettier, type-check, test, audit]
   #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v4
+  #     - uses: actions/checkout@v4
+  #     - uses: actions/setup-node@v4
   #       with:
   #         node-version: 18
-
-  #     - name: Install dependencies
-  #       run: npm install
-
+  #     - run: npm install
   #     - name: Cache SonarCloud packages
   #       uses: actions/cache@v4
   #       with:
   #         path: ~/.sonar/cache
   #         key: ${{ runner.os }}-sonar
-
-  #     - name: Run SonarCloud Scan
-  #       uses: SonarSource/sonarcloud-github-action@v2
+  #     - name: Run SonarCloud Analysis
+  #       uses: sonarsource/sonarcloud-github-action@v2
   #       with:
   #         projectBaseDir: .
   #       env:
   #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #         SONAR_PROJECT_KEY: your-org_or_user_your-project
-  #         SONAR_ORGANIZATION: your-org_or_user
+  #         SONAR_PROJECT_KEY: your-org_your-project
+  #         SONAR_ORGANIZATION: your-org
 
+  build:
+    name: Build React App
+    runs-on: ubuntu-latest
+    needs: sonar
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: npm install
+      - name: Build React App
+        run: npm run build
   deploy-gh-pages:
     runs-on: ubuntu-latest
     needs: [eslint]    
