--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -100,7 +100,7 @@ jobs:
   build:
     name: Build React App
     runs-on: ubuntu-latest
-    needs: sonar
+    # needs: sonar
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -109,9 +109,10 @@ jobs:
       - run: npm install
       - name: Build React App
         run: npm run build
+  
   deploy-gh-pages:
     runs-on: ubuntu-latest
-    needs: [eslint]    
+    needs: build   
 
     strategy:
       matrix:
