--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "jsx": "react-jsx",
+    "jsx": "react",
     "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
