--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,17 +37,17 @@ jobs:
       - name: Check code formatting
         run: npx prettier . --check
 
-  type-check:
-    name: TypeScript Type Check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18
-      - run: npm install
-      - name: Run TypeScript
-        run: npx tsc --noEmit
+  # type-check:
+  #   name: TypeScript Type Check
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 18
+  #     - run: npm install
+  #     - name: Run TypeScript
+  #       run: npx tsc --noEmit
 
   test:
     name: Run Tests
