--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,110 +9,9 @@ on:
   pull_request:
     branches: ["dev"]
 
-permissions:
-  contents: write
-
 jobs:
-  lint:
-    name: ESLint Check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18
-      - run: npm install
-      - name: Run ESLint
-        run: npx eslint . --ext .js,.jsx,.ts,.tsx
-
-  prettier:
-    name: Prettier Format Check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18
-      - run: npm install
-      - name: Check code formatting
-        run: npx prettier . --check
-
-  # type-check:
-  #   name: TypeScript Type Check
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 18
-  #     - run: npm install
-  #     - name: Run TypeScript
-  #       run: npx tsc --noEmit
-
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18
-      - run: npm install
-      - name: Run Jest Tests
-        run: npm test -- --coverage
-
-  # audit:
-  #   name: Dependency Audit
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 18
-  #     - run: npm install
-  #     - name: Audit Dependencies
-  #       run: npm audit --audit-level=high
-
-  # sonar:
-  #   name: SonarCloud Analysis
-  #   runs-on: ubuntu-latest
-  #   needs: [lint, prettier, type-check, test, audit]
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 18
-  #     - run: npm install
-  #     - name: Cache SonarCloud packages
-  #       uses: actions/cache@v4
-  #       with:
-  #         path: ~/.sonar/cache
-  #         key: ${{ runner.os }}-sonar
-  #     - name: Run SonarCloud Analysis
-  #       uses: sonarsource/sonarcloud-github-action@v2
-  #       with:
-  #         projectBaseDir: .
-  #       env:
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #         SONAR_PROJECT_KEY: your-org_your-project
-  #         SONAR_ORGANIZATION: your-org
-
   build:
-    name: Build React App
     runs-on: ubuntu-latest
-    # needs: sonar
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18
-      - run: npm install
-      - name: Build React App
-        run: npm run build
-
-  deploy-gh-pages:
-    runs-on: ubuntu-latest
-    needs: build
 
     strategy:
       matrix:
@@ -131,33 +30,9 @@ jobs:
       - run: npm test
 
       - name: Deploy with gh-pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: "react-vite-demo"
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
-
-  # docker-build-push:
-  #   runs-on: ubuntu-latest
-  #   needs: deploy-gh-pages
-
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
-
-  #     - name: Login to Docker Hub
-  #       uses: docker/login-action@v3
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
-
-  #     - name: Build and push Docker image
-  #       uses: docker/build-push-action@v5
-  #       with:
-  #         context: .
-  #         push: true
-  #         tags: your-dockerhub-username/your-react-app:latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: 'react-vite-demo'
