--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ghpagesdemo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nzlotrfan.github.io/ghpagesdemo",
+  "homepage": "https://sw-tt-saurinshah.github.io/react-vite-demo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
